# its-a-unix-system

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  build.rs  package-lock.json
.github/workflows/: release.yml  rust.yml
assets/: memo
rootfs/: example.sh  notes.txt
rootfs/etc/: os-release  profile
rootfs/root/: example.sh
rootfs/usr/share/cowsay/: licenses
rootfs/usr/share/cowsay/cows/: cow  ferris
rootfs/usr/share/games/: fortunes
rootfs/usr/share/games/fortunes/: fortunes  risque
rootfs/usr/share/theme/themes/: blue  eye-sore  hacker  white-on-black
src/: .clang-format  ansi_codes.rs  commands.cpp  commands.h  filesystem.rs  input_stream.rs  js_bindings.cpp  js_bindings.h  lib.rs  main.cpp  process.rs  shell.cpp  shell.h  utils.rs
src/filesystem/: dev.rs  mod.rs  multi.rs
src/programs/: cat.rs  clear.rs  cowsay.rs  cp.rs  echo.rs  find.rs  fortune.rs  grep.rs  head.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rev.rs  rm.rs  rmdir.rs  sed.rs  sh.rs  shell.rs  sort.rs  sponge.rs  tail.rs  tee.rs  test.rs  theme.rs  touch.rs  vi.rs  wc.rs  which.rs  whoami.rs
src/programs/common/: color_picker.rs  extendable_iterator.rs  mod.rs  readline.rs  shell_commands.rs
src/streams/: file_redirect_in.rs  file_redirect_out.rs  input_stream.rs  mod.rs  output_stream.rs  pipe.rs  standard_streams.rs
static/: index.html  main.js  style.css
tests/: mod.rs
www/: .eslintrc.cjs  .gitignore  index.html  index.js  package-lock.json  package.json  style.css  term.js  utils.js  webpack.config.js
