[package]
name = "faux-unix-system"
description = "A unix terminal for your website"
version = "0.1.0"
authors = ["Property404 <git@dagans.dev>"]
edition = "2021"
repository = "https://github.com/Property404/its-a-unix-system"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.68"
ascii = "1.1.0"
clap = { version = "4.0.29", features = ["derive", "std", "help", "usage", "suggestions"], default-features = false }
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = "0.3.25"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.60"
rand = "0.8.5"
regex = "1.7.0"
textwrap = "0.16.0"
vfs = "0.9.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = { version = "0.4.33", features = ["futures-core", "futures-core-03-stream"] }
web-sys = { version = "0.3.60", features = ["Document", "Window", "KeyboardEvent"] }

[build-dependencies]
anyhow = "1.0.68"
walkdir = "2.3.2"

[dev-dependencies]
futures-test = "0.3.25"

[profile.release]
opt-level = "s"
lto = true
