[package]
name = "its-a-unix-system"
description = "A unix terminal for your website"
version = "0.1.0"
authors = ["Property404 <git@dagans.dev>"]
edition = "2021"
repository = "https://github.com/Property404/its-a-unix-system"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0"
ascii = "1.1"
clap = { version = "4.4", features = ["derive", "std", "help", "usage", "suggestions"], default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand = "0.8"
regex = "1.10"
sedregex = "0.2.5"
textwrap = "0.16.0"
vfs = "0.10.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = { version = "0.4.39", features = ["futures-core", "futures-core-03-stream"] }
web-sys = { version = "0.3.66", features = ["Document", "Window", "KeyboardEvent", "Element"] }

[build-dependencies]
anyhow = "1.0.75"
walkdir = "2.4.0"

[dev-dependencies]
futures-test = "0.3.29"

[profile.release]
opt-level = "s"
lto = true
