[package]
name = "its-a-unix-system"
description = "A unix terminal for your website"
version = "0.1.1-alpha.1"
authors = ["Property404 <git@dagans.dev>"]
edition = "2021"
repository = "https://github.com/Property404/its-a-unix-system"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1"
ascii = "1.1"
clap = { version = "4", features = ["derive", "std", "help", "usage", "suggestions"], default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand = "0.8"
regex = "1.11"
sedregex = "0.2"
textwrap = "0.16"
vfs = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", features = ["futures-core", "futures-core-03-stream"] }
web-sys = { version = "0.3", features = ["Document", "Window", "KeyboardEvent", "Element"] }

[build-dependencies]
anyhow = "1"
walkdir = "2.5"

[dev-dependencies]
futures-test = "0.3"

[profile.release]
opt-level = "s"
strip = true
